fix: moving peach

--- a/src/about.html
+++ b/src/about.html
@@ -1,1 +1,4 @@
-<h1>Fruity Modules™</h1>
+<div class="page center-center">
+  <div class="medium-text">Dynamic Module Loading</div>
+  <div class="big-text-purple">in Aurelia 2</div>
+</div>
