--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,12 +1,14 @@
 <import from="./welcome"></import>
-<import from="./about.html"></import>
+<import from="./about"></import>
 <import from="./missing"></import>
+
+<import from="./peach-top"></import>
 
 <nav>
   <a goto="welcome">Welcome</a>
   <a goto="about">About</a>
-  <a click.delegate="navigateTo('banana')">🍌</a>
-  <a goto="peach">🍑</a>
+  <a click.trigger="navigateTo('banana')">🍌</a>
+  <a goto="peach-top">🍑</a>
 </nav>
 
 <au-viewport default="welcome" fallback="missing"></au-viewport>
